# vigi-vision

./: .env.example  .gitignore  AGENTS.md  PROJECT.md  README.md  pyproject.toml
docs/: README.md
docs/design/: investigation-plan.md
docs/integrations/: recording-retrieval.md
docs/integrations/sdk-change-requests/: live-rtsp-url-builder.md
private_data/: README.md
sample_data/: README.md
src/vigi_vision/: __init__.py  __main__.py  analysis.py  channel_selection.py  cli.py  cli_output.py  config.py  ffmpeg.py  gateway.py  investigate_cli.py  investigation.py  investigation_artifacts.py  investigation_collection.py  investigation_manifest.py  investigation_progress.py  investigation_service.py  investigation_snapshot.py  ipc.py  nvr.py  openai_errors.py  profiles.py  recording.py  recording_cli.py  replay.py  snapshot_cli.py  temporal_profiles.py  video.py  video_cli.py  workflow.py
tests/: test_analysis.py  test_channel_selection.py  test_cli.py  test_config.py  test_ffmpeg.py  test_investigate_cli.py  test_investigation.py  test_investigation_artifact_failures.py  test_investigation_artifacts.py  test_investigation_collection.py  test_investigation_service.py  test_ipc.py  test_nvr.py  test_profiles.py  test_recording_cli.py  test_recording_retrieval.py  test_replay_timeout.py  test_snapshot_cli.py  test_temporal_profiles.py  test_video.py  test_workflow.py
typings/vigi/: __init__.pyi
